# etna-cli

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  commands.rs  config.rs  experiment.rs  git_driver.rs  main.rs  python_driver.rs  snapshot.rs  store.rs  workload.rs
src/commands/: config.rs  experiment.rs  store.rs  workload.rs
src/commands/config/: change_branch.rs  setup.rs  show.rs
src/commands/experiment/: new_experiment.rs  run_experiment.rs  show_experiment.rs
src/commands/store/: query.rs  write.rs
src/commands/store/query/: lib.jq  lib.rs
src/commands/workload/: add_workload.rs  list_workloads.rs  remove_workload.rs
templates/: .gitignoret
templates/experimentation/: Collect.pyt
