[package]
name = "etna-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
git2 = "0.19.0"
log = "0.4.22"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
toml = "0.8.19"
